# cpp-pytorch

./: .gitignore  CMakeLists.txt  example-app.cpp  readme.md  tracing.py
libtorch/: build-version
libtorch/include/ATen/: CPUByteType.h  CPUCharType.h  CPUDoubleType.h  CPUFloatType.h  CPUGenerator.h  CPUHalfType.h  CPUIntType.h  CPULongType.h  CPUShortType.h  CUDAByteType.h  CUDACharType.h  CUDADoubleType.h  CUDAFloatType.h  CUDAGenerator.h  CUDAHalfType.h  CUDAIntType.h  CUDALongType.h  CUDAShortType.h  Functions.h  NativeFunctions.h  SparseCPUByteType.h  SparseCPUCharType.h  SparseCPUDoubleType.h  SparseCPUFloatType.h  SparseCPUIntType.h  SparseCPULongType.h  SparseCPUShortType.h  SparseCUDAByteType.h  SparseCUDACharType.h  SparseCUDADoubleType.h  SparseCUDAFloatType.h  SparseCUDAIntType.h  SparseCUDALongType.h  SparseCUDAShortType.h  TypeDefault.h  TypeExtendedInterface.h
libtorch/include/TH/: THGeneral.h
libtorch/include/c10/macros/: cmake_macros.h
libtorch/include/caffe2/core/: macros.h
libtorch/lib/: libc10.dylib  libcaffe2_detectron_ops.dylib  libcaffe2_module_test_dynamic.dylib  libcaffe2_observers.dylib  libonnxifi.dylib  libonnxifi_dummy.dylib
libtorch/share/cmake/ATen/: ATenConfig.cmake
libtorch/share/cmake/Caffe2/: Caffe2Config.cmake  Caffe2ConfigVersion.cmake
libtorch/share/cmake/Torch/: TorchConfig.cmake
